Fix footer z-index

--- a/src/opening-period/v2/components/form/OpeningHoursForm.scss
+++ b/src/opening-period/v2/components/form/OpeningHoursForm.scss
@@ -30,6 +30,7 @@
   left: 0;
   position: fixed;
   right: 0;
+  z-index: 3;
 }
 
 .opening-hours-page__actions {
